tests/paczka1/fuzzy1/48854961.err
Error in line 5: S751 S751 13,8
Error in line 17: Hsl A833 46,70
Error in line 6: Hsl A833 10,3
Error in line 30: Hsl S751 245,8
